2010-05-03  James Youngman  <jay@gnu.org>

	Remove obsolete replacements for missing library files.
	* strerror.c: Remove obsolete file.
	* strstr.c: Remove obsolete file.
	* configure.ac: Don't refer to strerror or strstr via
	AC_REPLACE_FUNCS.

	Remove space-tab sequences.
	* .x-sc_space_tab: Exempt NEWS, ChangeLog files and
	tests/prt/all.expected.Z
	* docs/Platforms: Avoid space-tab sequences.
	* docs/TODO: Likewise.
	* docs/tests-todo.txt: Likewise.
	* pfile.h: Likewise.
	* sccsfile.cc: Likewise.
	* tests/Makefile.am: Likewise.
	* tests/common/test-common: Likewise.
	* tests/admin/flags.sh: Likewise.
	* tests/binary/auto.sh: Likewise.
	* tests/binary/binbasic.sh: Likewise.
	* unit-tests/test_bigfile.cc: Likewise.
	* unit-tests/test_myset.cc: Likewise.
	* tests/admin/locks.sh: Likewise.
	* tests/delta/nulldelta.sh: Likewise.
	* tests/delta/basic.sh: Likewise.
	* tests/delta/MRs.sh: Likewise.

	Remove unused source files.
	* rename.c: Remove unused file.
	* remove.c: Remove unused file.
	* configure.ac: Don't refer to these files with AC_REPLACE_FUNCS.

	Fix lint errors caused by failure to include <config.h>.
	* testutils/yes.c: Include <config.h> instead of "config.h".
	* testutils/ekko.c: Likewise.
	* testutils/lndir.c: Likewise.
	* testutils/seeker.c: Likewise.
	* testutils/user.c: Likewise.
	* testutils/uu_decode.c: Likewise.
	* testutils/yammer.c: Likewise.
	* testutils/last-time.c: Include <config.h>
	* rename.c: Likewise.
	* remove.c: Likewise.

	Avoid non-portable [ x -a y ] test usage.
	* scripts/rev-freq.sh (scale): Change [ x -a y ] to [ x ] && [ y ].
	* tests/make-links (common_files): Likewise.

	Exempt ourselves from SRTEQ for all C and C++ files.
	* .x-sc_prohibit_strcmp: We don't want to use STREQ, so suppress
	this warning for C and C++ files.

	Ignore existing instances of magic contstants in calls to exit.
	* .x-sc_prohibit_magic_number_exit: Ignore existing instances of
	magic contstants in calls to exit.

	Remove trailing blank lines.